(task): update requirements to new datapane on pip, and open quickstart by default

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
   "postCreateCommand": "",
   "customizations": {
     "codespaces": {
-      "openFiles": []
+      "openFiles": ["quickstart.ipynb"]
     },
     "vscode": {
       "extensions": [
