--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,8 @@
   },
   "waitFor": "onCreateCommand",
   "updateContentCommand": "python3 -m pip install --upgrade pip setuptools wheel && python3 -m pip install -r requirements.txt",
-  "postCreateCommand": "",
+  //"postCreateCommand": "",
+  "forwardPorts": [8080],
   "customizations": {
     "codespaces": {
       "openFiles": ["quickstart.ipynb"]
