--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,21 +1,31 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "hostRequirements": {
-    "cpus": 4
-  },
-  "waitFor": "onCreateCommand",
-  "updateContentCommand": "python3 -m pip install --upgrade pip setuptools wheel && python3 -m pip install -r requirements.txt",
-  //"postCreateCommand": "",
-  "forwardPorts": [8080],
-  "customizations": {
-    "codespaces": {
-      "openFiles": ["quickstart.ipynb"]
+    "name":"Datapane Quickstart",
+    "image":"mcr.microsoft.com/devcontainers/python:0-3.11-bullseye",
+
+    // Features to add to the dev container. More info: https://containers.dev/features.
+    "features":{
+       "ghcr.io/devcontainers/features/python:1":{
+          "installTools":true,
+          "installJupyterlab":true,
+          "configureJupyterlabAllowOrigin":"*"
+       }
     },
-    "vscode": {
-      "extensions": [
-        "ms-toolsai.jupyter",
-        "ms-python.python"
-      ]
+    "waitFor":"onCreateCommand",
+    "updateContentCommand":"python3 -m pip install -r requirements.txt",
+    "forwardPorts":[
+       8080
+    ],
+    "customizations":{
+       "codespaces":{
+          "openFiles":[
+             "quickstart.ipynb"
+          ]
+       },
+       "vscode":{
+          "extensions":[
+             "ms-toolsai.jupyter",
+             "ms-python.python"
+          ]
+       }
     }
-  }
-}
+ }
